grafana/files/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: iccr
  rules:
  - host: prometheus.<signum>.<cluster>.ews.gic.ericsson.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eric-pm-server
            port:
              number: 9090
