grafana/files/grafana-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-external-trafic
spec:
  podSelector:
    matchLabels:
      app: evnfm-grafana
  ingress:
    # ALLOW traffic from external clients
    - from: []
