grafana/files/prometheus-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-external-traffic
spec:
  podSelector:
    matchLabels:
      app: eric-pm-server
  ingress:
  # ALLOW traffic from external clients
  - from: []
